# fb_libraries_static

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  project_config.jam
.devcontainer/: devcontainer.json
Cmake/: FBLibraries.cmake
